--- a/wsgiadmin/useradmin/templates/admin.html
+++ b/wsgiadmin/useradmin/templates/admin.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="/m/uni-form/css/uni-form.css">
 	<link rel="stylesheet" type="text/css" href="/m/uni-form/css/default.uni-form.css">
 	<link rel="stylesheet" type="text/css" href="/m/css/admin.css">
-	{# <link rel="stylesheet" href="/m/css/jquery-ui-1.8.9.custom.css" type="text/css" media="screen" /> #}
+	<link rel="stylesheet" href="/m/css/jquery-ui-1.8.16.custom.css" type="text/css" media="screen" />
 	{# <link rel="stylesheet" type="text/css" href="/m/uni-form/css/dark.uni-form.css"> #}
 	<script type="text/javascript" src="/m/js/jquery-1.4.4.min.js"></script>
 	{# <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script> #}
