--- a/wsgiadmin/pgs/templates/pgs.html
+++ b/wsgiadmin/pgs/templates/pgs.html
@@ -5,31 +5,40 @@
 	{% trans "Administrace > Postgresql databáze" %}
 {% endblock %}
 
+{% block jsblock %}
+	{{ block.super }}
+
+	$(function() {
+		$("#dblist .db_pwdchange").click(function() {
+			var db = $(this).data('id');
+			$("#db_dialog").dialog({"width": 400, "height": 300});
+			$("#db_dialog").load("{% url wsgiadmin.pgs.views.passwd "" %}" + db + "/");
+		});
+
+		$("#dblist .db_delete").click(function() {
+			var orly = confirm('{% trans "Opravdu chcete smazat tuto databázi?" %}');
+			if (orly) {
+				var db = $(this).data('id');
+				$("#db_" +  db).load("{% url wsgiadmin.pgs.views.rm "" %}" + db);
+			}
+		});
+	});
+{% endblock %}
+
+
 {% block content %}
-<script type="text/javascript">
-	function remove(what) {
-		$("#pg_"+what).load("{% url wsgiadmin.pgs.views.rm "" %}"+what)
-	}
-</script>
 <div id="message-box"></div>
 
 <h2>Postgresql</h2>
 
 {% blocktrans %}
-<p>Informace týkající se MySQL databází najdete na Wiki na adrese <a href='{{ WIKI_URL }}/sprava_postgresql_databazi' target="_blank">{{ WIKI_URL }}/sprava_postgresql_databazi</a>.</p>
+<p>Informace týkající se Postgresql databází najdete na Wiki na adrese <a href='{{ WIKI_URL }}/sprava_postgresql_databazi' target="_blank">{{ WIKI_URL }}/sprava_postgresql_databazi</a>.</p>
 {% endblocktrans %}
 
 <div id="db_dialog"></div>
 
-<script type="text/javascript">
-	function pg_passwd(db) {
-		$("#db_dialog").dialog({"width": 400, "height": 300});
-		$("#db_dialog").load("{% url wsgiadmin.pgs.views.passwd "" %}"+db+"/");
-	}
-</script>
-
 <h3>{% trans "Seznam Postgresql databází" %}</h3>
-<table>
+	<table id="dblist">
 	<thead>
 		<tr>
 		   <th>{% trans "Název databáze" %}</th>
@@ -39,13 +48,17 @@
 	{% if pgs %}
 	<tbody>
 		{% for pg in pgs.object_list %}
-		<tr>
-			<td>{{ pg }}</td>
-			<td id="pg_{{ pg }}">
-				<a href="#" title="{% trans "Změnit heslo" %}" onclick="pg_passwd('{{ pg }}');"><img src="/m/icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Změnit heslo" %}" /></a>
-				<a href="#" title="{% trans "Smazat" %}" onclick="if(confirm('{% trans "Opravdu chcete smazat tuto databázi" %}?')) remove('{{ pg }}');"><img src="/m/icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Smazat" %}" /></a>
-			</td>
-		</tr>
+			<tr>
+								<td>{{ db }}</td>
+								<td id="db_{{ db }}">
+									<a href="#" class="db_pwdchange" title="{% trans "Změnit heslo" %}" data-id="{{ db }}">
+										<img src="/m/icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Změnit heslo" %}"/>
+									</a>
+									<a href="#" class="db_delete" title="{% trans "Smazat" %}" data-id="{{ db }}">
+										<img src="/m/icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Smazat" %}"/>
+									</a>
+								</td>
+							</tr>
 		{% endfor %}
 	</tbody>
 	<tfoot>
