double colon fix

--- a/wsgiadmin/useradmin/templates/universal.html
+++ b/wsgiadmin/useradmin/templates/universal.html
@@ -15,7 +15,7 @@
 {% endif %}
 
 {% if siteErrors %}
-<p>{% trans "Následující doménu jsou použity již u jiné stránky nebo je nemáte zadané:" %}:</p>
+<p>{% trans "Následující doménu jsou použity již u jiné stránky nebo je nemáte zadané" %}:</p>
 <ul>
 	{% for x in siteErrors %}
 	<li>{{ x }}</li>
