--- a/wsgiadmin/pgs/templates/pgs.html
+++ b/wsgiadmin/pgs/templates/pgs.html
@@ -16,7 +16,7 @@
 <h2>Postgresql</h2>
 
 {% blocktrans %}
-<p>Informace týkající se MySQL databází najdete na Wiki na adrese <a href='{{ WIKI_URL }}/sprava_postgresql_databazi' target="_blank">{{ WIKI_URL }}/sprava_postgresql_databazi</a>.</p>
+<p>Informace týkající se PostgreSQL databází najdete na Wiki na adrese <a href='{{ WIKI_URL }}/sprava_postgresql_databazi' target="_blank">{{ WIKI_URL }}/sprava_postgresql_databazi</a>.</p>
 {% endblocktrans %}
 
 <div id="db_dialog"></div>
