--- a/wsgiadmin/mysql/templates/mysql.html
+++ b/wsgiadmin/mysql/templates/mysql.html
@@ -73,11 +73,11 @@
 							<a href="{% url wsgiadmin.mysql.views.show dbs.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
 
 						{% for p in paginator.page_range %}
-							{% ifequal p num_page %}
+							{% if p == num_page %}
 								<a href="{% url wsgiadmin.mysql.views.show p %}" class="number current" title="{{ p }}">{{ p }}</a>
 							{% else %}
 								<a href="{% url wsgiadmin.mysql.views.show p %}" class="number" title="{{ p }}">{{ p }}</a>
-							{% endifequal %}
+							{% endif %}
 						{% endfor %}
 
 						{% if ftps.has_next %}
