--- a/wsgiadmin/pgs/templates/pgs.html
+++ b/wsgiadmin/pgs/templates/pgs.html
@@ -70,11 +70,11 @@
 						{% if ftps.has_previous %}<a href="{% url wsgiadmin.pgs.views.show pgs.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
 
 						{% for p in paginator.page_range %}
-							{% ifequal p num_page %}
+							{% if p == num_page %}
 								<a href="{% url wsgiadmin.pgs.views.show p %}" class="number current" title="{{ p }}">{{ p }}</a>
 							{% else %}
 								<a href="{% url wsgiadmin.pgs.views.show p %}" class="number" title="{{ p }}">{{ p }}</a>
-							{% endifequal %}
+							{% endif %}
 						{% endfor %}
 
 						{% if ftps.has_next %}<a href="{% url wsgiadmin.pgs.views.show pgs.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
