--- a/wsgiadmin/emails/templates/boxes.html
+++ b/wsgiadmin/emails/templates/boxes.html
@@ -4,14 +4,13 @@
 {% block title %}
 	{% trans "Administrace > E-mailové schránky" %}
 {% endblock %}
-
+{% block jsblock %}
+function remove(what) {
+	$("#remove_"+what).hide()
+	$("#removed_"+what).load("{% url wsgiadmin.emails.views.removeBox 0 %}"+what)
+}
+{% endblock %}
 {% block content %}
-<script type="text/javascript">
-	function remove(what) {
-		$("#remove_"+what).hide()
-		$("#removed_"+what).load("{% url wsgiadmin.emails.views.removeBox 0 %}"+what)
-	}
-</script>
 
 <h2>E-mailové schránky</h2>
 {% trans "<p>Všechny informace týkající se e-mailů najdete na Wiki na adrese" %} <a href='{{ WIKI_URL }}/e-maily' target="_blank">{{ WIKI_URL }}/e-maily</a>.</p>
@@ -49,11 +48,11 @@
 						{% if emails.has_previous %}<a href="{% url wsgiadmin.emails.views.boxes emails.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
 
 						{% for p in paginator.page_range %}
-							{% ifequal p num_page %}
+							{% if p == num_page %}
 								<a href="{% url wsgiadmin.emails.views.boxes p %}" class="number current" title="{{ p }}">{{ p }}</a>
 							{% else %}
 								<a href="{% url wsgiadmin.emails.views.boxes p %}" class="number" title="{{ p }}">{{ p }}</a>
-							{% endifequal %}
+							{% endif %}
 						{% endfor %}
 
 						{% if emails.has_next %}<a href="{% url wsgiadmin.emails.views.boxes emails.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
