--- a/wsgiadmin/useradmin/templates/admin.html
+++ b/wsgiadmin/useradmin/templates/admin.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="/m/css/admin.css">
 	<link rel="stylesheet" href="/m/css/jquery-ui-1.8.16.custom.css" type="text/css" media="screen" />
 	{# <link rel="stylesheet" type="text/css" href="/m/uni-form/css/dark.uni-form.css"> #}
-	<script type="text/javascript" src="/m/js/jquery-1.4.4.min.js"></script>
+	<script type="text/javascript" src="/m/js/jquery-1.6.4.min.js"></script>
 	{# <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script> #}
 	<script src="/m/js/less-1.1.3.min.js" type="text/javascript"></script>
 	<script src="/m//uni-form/js/uni-form.jquery.js" type="text/javascript"></script>
@@ -48,11 +48,12 @@
 		<div class="line2"></div>
 
 		<p>
-			{% ifnotequal u superuser %}{{ superuser.username }} <span class="red">({% trans "superuživatel" %})</span> <br>{% endifnotequal %}
-			{% ifnotequal u superuser %}{% trans "Přepnuto na:" %} {% endifnotequal %}{{ u.username }}{% if u.is_superuser %} (<span class="red">{% trans "superuživatel" %}</span>){% endif %}<br />
-			{% ifnotequal u superuser %}<a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "Přepnout zpět" %}</a><br />{% endifnotequal %}
+			{% if u != superuser %}{{ superuser.username }} <span class="red">({% trans "superuživatel" %})</span> <br>{% endif %}
+			{% if u != superuser %}{% trans "Přepnuto na:" %} {% endif %}{{ u.username }}{% if u.is_superuser %} (<span class="red">{% trans "superuživatel" %}</span>){% endif %}<br />
+			{% if u != superuser %}<a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "Přepnout zpět" %}</a><br />{% endif %}
 			<span class="white">
-				<a href="{% url wsgiadmin.useradmin.views.change_passwd %}" title="{% trans "Změnit heslo" %}">{% trans "Změnit heslo" %}</a> | <a href="{% url django.contrib.auth.views.logout %}" title="{% trans "Odhlásit" %}">{% trans "Odhlásit" %}</a>
+				<a href="{% url wsgiadmin.useradmin.views.change_passwd %}" title="{% trans "Změnit heslo" %}">{% trans "Změnit heslo" %}</a> |
+				<a href="{% url django.contrib.auth.views.logout %}" title="{% trans "Odhlásit" %}">{% trans "Odhlásit" %}</a>
 			</span>
 		</p>
 
