--- a/wsgiadmin/useradmin/templates/login_reg.html
+++ b/wsgiadmin/useradmin/templates/login_reg.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<title>Přihlášení a registrace</title>
-	<link rel="stylesheet/less" type="text/css" href="/m/cssng/style.less">
-	<script src="/m/js/less-1.1.3.min.js" type="text/javascript"></script>
+	<link rel="stylesheet/less" type="text/css" href="{{ STATIC_URL }}cssng/style.less">
+	<script src="{{ STATIC_URL }}js/less-1.1.3.min.js" type="text/javascript"></script>
 </head>
 <body>
 
