--- a/wsgiadmin/useradmin/templates/regok.html
+++ b/wsgiadmin/useradmin/templates/regok.html
@@ -2,17 +2,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <title>Přihlášení a registrace</title>
-        <link rel="stylesheet/less" type="text/css" href="/m/cssng/style.less">
-        <script src="/m/js/less-1.0.41.min.js" type="text/javascript"></script>
+	<title>Přihlášení a registrace</title>
+	<link rel="stylesheet/less" type="text/css" href="{{ STATIC_URL }}cssng/style.less">
+	<script src="{{ STATIC_URL }}js/less-1.1.3.min.js" type="text/javascript"></script>
 </head>
 <body>
 
 <div id="container">
-        <div id="top">
-                <h1>{% trans "Registrace proběhla v pořádku." %} {{ SERVER_NAME }}</h1>
-                <p>Vyčkejte prosím na schválení účtu.</p>
-        </div>
+	<div id="top">
+		<h1>{% trans "Registrace proběhla v pořádku." %}</h1>
+
+		<p>Vyčkejte prosím na schválení účtu, o kterém budete spraveni emailem.</p>
+	</div>
 </div>
 
 </body>
