--- a/wsgiadmin/useradmin/templates/admin.html
+++ b/wsgiadmin/useradmin/templates/admin.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/admin.css">
 	<link rel="stylesheet" href="{{ STATIC_URL }}css/jquery-ui-1.8.16.custom.css" type="text/css" media="screen" />
 	{# <link rel="stylesheet" type="text/css" href={{ STATIC_URL }}uni-form/css/dark.uni-form.css"> #}
-	<script type="text/javascript" src={{ STATIC_URL }}js/jquery-1.6.4.min.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.6.4.min.js"></script>
 	{# <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script> #}
 	<script src="{{ STATIC_URL }}js/less-1.1.3.min.js" type="text/javascript"></script>
 	<script src="{{ STATIC_URL }}uni-form/js/uni-form.jquery.js" type="text/javascript"></script>
