--- a/wsgiadmin/domains/templates/domains.html
+++ b/wsgiadmin/domains/templates/domains.html
@@ -40,7 +40,9 @@ function remove(what) {
 			<td>{{ domain.pub_date|date:"d.m.Y" }}</td>
 			<td>{{ domain.name }}</td>
 			<td id="domain_{{ domain.id }}">
-				 <a href="#" title="Smazat" onclick="if(confirm('{% trans "Opravdu chcete smazat tuto doménu?" %}')) remove({{ domain.id }})"><img src={{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="Smazat" /></a>
+				 <a href="#" title="Smazat" onclick="if(confirm('{% trans "Opravdu chcete smazat tuto doménu?" %}')) remove({{ domain.id }})">
+					 <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="Smazat" />
+				 </a>
 			</td>
 		</tr>
 		{% endfor %}
