--- a/wsgiadmin/m/style/style.css
+++ b/wsgiadmin/m/style/style.css
@@ -63,7 +63,7 @@ a:hover {
 	Header
 --------------------------------------------------------------------------------------------------------*/
 #header {
-	background: url(../images/bg-hlavicka.jpg) repeat-x top;
+	background: url(/m/images/bg-hlavicka.jpg) repeat-x top;
 	height: 145px;
 	position: relative;
 	overflow: hidden;
@@ -84,7 +84,7 @@ a:hover {
 	font-weight: bold;
 }
 #header #login {
-	background: url(../images/bg-login.png) no-repeat 0 0;
+	background: url(/m/images/bg-login.png) no-repeat 0 0;
 	padding: 23px 0 0 30px;
 	width: 387px;
 	height: 61px;
@@ -93,7 +93,7 @@ a:hover {
 	top: 20px;
 }
 #header #login strong {
-	background: url(../images/ico-uzivatel.png) no-repeat 0 2px;
+	background: url(/m/images/ico-uzivatel.png) no-repeat 0 2px;
 	margin: 0 30px 0 0;
 	padding: 4px 0 2px 20px;
 }
@@ -103,7 +103,7 @@ a:hover {
 	font-weight: normal;
 }
 .odhlasit a {
-	background: url(../images/tlacitko-odhlasit.png) no-repeat 0 0;
+	background: url(/m/images/tlacitko-odhlasit.png) no-repeat 0 0;
 	padding: 0 0 0 50px;
 	width: 80px;
 	height: 30px;
@@ -116,7 +116,7 @@ a:hover {
 	top: 15px;
 }
 .odhlasit a:hover {
-	background: url(../images/tlacitko-odhlasit.png) no-repeat 0 -30px;
+	background: url(/m/images/tlacitko-odhlasit.png) no-repeat 0 -30px;
 }
 #header #main-menu {
 	margin: 0 30px 0 0;
@@ -138,7 +138,7 @@ a:hover {
 	font-weight: bold;
 }
 #header #main-menu li a {
-	background: url(../images/bg-main-menu-li-left-a.jpg) no-repeat left top;
+	background: url(/m/images/bg-main-menu-li-left-a.jpg) no-repeat left top;
 	padding: 0 0 0 20px;
 	height: 40px;
 	float: left;
@@ -147,13 +147,13 @@ a:hover {
 	text-shadow: 0 0 30px #000;
 }
 #header #main-menu li a span {
-	background: url(../images/bg-main-menu-li-right-a.jpg) no-repeat right top;
+	background: url(/m/images/bg-main-menu-li-right-a.jpg) no-repeat right top;
 	width: 20px;
 	height: 40px;
 	float: right;
 }
 #header #main-menu li a:hover {
-	background: url(../images/bg-main-menu-li-left.jpg) no-repeat left top;
+	background: url(/m/images/bg-main-menu-li-left.jpg) no-repeat left top;
 	padding: 0 0 0 20px;
 	height: 40px;
 	float: left;
@@ -162,14 +162,14 @@ a:hover {
 	text-shadow: 0 0 30px #000;
 }
 #header #main-menu li a:hover span {
-	background: url(../images/bg-main-menu-li-right.jpg) no-repeat right top;
+	background: url(/m/images/bg-main-menu-li-right.jpg) no-repeat right top;
 	width: 20px;
 	height: 40px;
 	float: right;
 	color: #444;
 }
 #header #main-menu li.active a {
-	background: url(../images/bg-main-menu-li-left.jpg) no-repeat left top;
+	background: url(/m/images/bg-main-menu-li-left.jpg) no-repeat left top;
 	padding: 0 0 0 20px;
 	height: 40px;
 	float: left;
@@ -178,7 +178,7 @@ a:hover {
 	text-shadow: 0 0 30px #000;
 }
 #header #main-menu li.active a span {
-	background: url(../images/bg-main-menu-li-right.jpg) no-repeat right top;
+	background: url(/m/images/bg-main-menu-li-right.jpg) no-repeat right top;
 	width: 20px;
 	height: 40px;
 	float: right;
@@ -282,7 +282,7 @@ a:hover {
 	Content
 --------------------------------------------------------------------------------------------------------*/
 #content {
-	background: url(../images/bg-content.png) repeat-y left;
+	background: url(/m/images/bg-content.png) repeat-y left;
 	margin: 0;
 	padding: 0 0 100px 250px;
 }
@@ -290,7 +290,7 @@ a:hover {
 	margin: 0 0 30px 0;
 }
 #content ul li {
-	background: url(../images/bullet-01.png) no-repeat 0 6px;
+	background: url(/m/images/bullet-01.png) no-repeat 0 6px;
 	padding: 0 0 0 10px;
 	line-height: 18px;
 }
@@ -575,19 +575,19 @@ a:hover {
 	border-radius: 6px;
 }
 #notifications li#error {
-	background: #fdd1d1 url(../images/ico-error.png) no-repeat 20px 10px !important;
+	background: #fdd1d1 url(/m/images/ico-error.png) no-repeat 20px 10px !important;
 	border: solid 1px #dc8787;
 }
 #notifications li#info {
-	background: #dde4fe url(../images/ico-info.png) no-repeat 20px 10px  !important;
+	background: #dde4fe url(/m/images/ico-info.png) no-repeat 20px 10px  !important;
 	border: solid 1px #94a8e8;
 }
 #notifications li#warning {
-	background: #fefbd4 url(../images/ico-upozorneni.png) no-repeat 20px 10px  !important;
+	background: #fefbd4 url(/m/images/ico-upozorneni.png) no-repeat 20px 10px  !important;
 	border: solid 1px #e6db54;
 }
 #notifications li#ok {
-	background: url(../images/ico-ok.png) no-repeat 20px 10px  #d8fed1 !important;
+	background: url(/m/images/ico-ok.png) no-repeat 20px 10px  #d8fed1 !important;
 	border: solid 1px #8ad17f;
 }
 #notifications li .zavrit {
