--- a/wsgiadmin/useradmin/templates/info.html
+++ b/wsgiadmin/useradmin/templates/info.html
@@ -22,30 +22,30 @@
 <h3>{% trans "Informace o Vašem účtu" %}</h3>
 <table>
 <tr>
-	<th>{% trans "Jméno" %}</th>
+	<td><strong>{% trans "Jméno" %}</strong></td>
 	<td>{{ u.parms.address.getName }}</td>
 </tr>
 <tr>
-	<th>{% trans "Uživatelské jméno" %}</th>
+	<td><strong>{% trans "Uživatelské jméno" %}</strong></td>
 	<td>{{ u.parms.user.username }}</td>
 </tr>
 <tr>
-	<th>{% trans "Domovský adresář" %}</th>
+	<td><strong>{% trans "Domovský adresář" %}</strong></td>
 	<td>{{ u.parms.home }}</td>
 </tr>
 {% if u.parms.fee %}
 <tr>
-	<th>{% trans "Paušální poplatek" %}</th>
+	<td><strong>{% trans "Paušální poplatek" %}</strong></td>
 	<td>{{ u.parms.fee }} {{ u.parms.currency|upper }}</td>
 </tr>
 {% else %}
 <tr>
-	<th>{% trans "Sleva" %} (%)</th>
+	<td><strong>{% trans "Sleva" %} (%)</strong></td>
 	<td>{{ u.parms.discount }}</td>
 </tr>
 {% endif %}
 <tr>
-	<th>{% trans "Server" %}</th>
+	<td><strong>{% trans "Server" %}</strong></td>
 	<td>{{ u.parms.web_machine.name }} (IPv4: {{ u.parms.web_machine.ip }}{% if u.parms.web_machine.ipv6 %} / IPv6: {{ u.parms.web_machine.ipv6 }}{% endif %})</td>
 </tr>
 </table>
@@ -54,45 +54,43 @@
 <table>
 <tr>
 	<th><strong>{% trans "Služba" %}</strong></th>
-	<td><strong>{% trans "Počet" %}</strong></td>
-	<td><strong>{% trans "Platba za den" %}</strong></td>
+	<th><strong>{% trans "Počet" %}</strong></th>
+	<th><strong>{% trans "Platba za den" %}</strong></th>
 </tr>
 <tr>
-	<th>{% trans "Domény" %}</th>
+	<td>{% trans "Domény" %}</td>
 	<td>{{ u.parms.count_domains }}×</td>
 	<td>{% trans "Více informací v" %} <a href="{% url wsgiadmin.domains.views.show %}">{% trans "seznamu domén" %}</a></td>
 </tr>
 {% if u.parms.fee %}
 <tr>
-	<th>{% trans "Weby/Aplikace" %}</th>
+	<td>{% trans "Weby/Aplikace" %}</td>
 	<td>{{ u.parms.count_sites }}×</td>
 	<td>{{ u.parms.fee|floatformat:2 }} {{ u.parms.currency|upper }}</td>
 </tr>
 {% else %}
 <tr>
-	<th>{% trans "Weby/Aplikace" %}</th>
+	<td>{% trans "Weby/Aplikace" %}</td>
 	<td>{{ u.parms.count_sites }}×</td>
 	<td>{{ u.parms.pay_for_sites|floatformat:2 }} {{ u.parms.currency|upper }}</td>
 </tr>
 {% endif %}
-<tr>
-	<td colspan="3"><hr /></td>
-</tr>
+
 {% if not u.parms.fee %}
 <tr>
-	<th><strong>{% trans "Platba za den" %}</strong></th>
+	<td><strong>{% trans "Platba za den" %}</strong></td>
 	<td></td>
 	<td>{{ u.parms.pay_total_day|floatformat:2 }}  {{ u.parms.currency|upper }}</td>
 </tr>
 <tr>
-	<th><strong>{% trans "Platba za měsíc" %}</strong></th>
+	<td><strong>{% trans "Platba za měsíc" %}</strong></td>
 	<td></td>
 	<td>{{ u.parms.pay_total_month|floatformat:2 }}  {{ u.parms.currency|upper }}</td>
 </tr>
 {% endif %}
 {% if u.balance_set.all %}
 <tr>
-	<th><strong>{% trans "Stav vašeho účtu" %}</strong></th>
+	<td><strong>{% trans "Stav vašeho účtu" %}</strong></td>
 	<td></td>
 	<td>{{ u.balance_set.all.0.sum|floatformat:2 }}  {{ u.parms.currency|upper }}</td>
 </tr>
