--- a/wsgiadmin/useradmin/templates/universal.html
+++ b/wsgiadmin/useradmin/templates/universal.html
@@ -20,7 +20,6 @@
 </ul>
 {% endif %}
 
-<fieldset>
 	<form action="{{ action }}" enctype="multipart/form-data" method="post" id="myform" class="uniForm">
 		{% csrf_token %}
 		{{ form|as_uni_form }}
@@ -29,9 +28,9 @@
 			<p><em>{{ x }}</em></p>
 		{% endfor %}
 
-		<p><input type="submit" value="{{ submit }}"/></p>
+		<p><input type="submit" class="input-submit" value="{{ submit }}"/></p>
 	</form>
-</fieldset>
+
 {% endblock %}
 
 {% block jsblock %}
