--- a/wsgiadmin/templates/simplepasswd.html
+++ b/wsgiadmin/templates/simplepasswd.html
@@ -9,7 +9,7 @@
 		<div class="tab-content default-tab" id="result">
 
 			<fieldset>
-			<form action="." enctype="multipart/form-data" method="post" id="myform">
+			<form action="../useradmin/templates" enctype="multipart/form-data" method="post" id="myform">
 
 			<div id="insert_form">
 			{{ form.as_p }}
