--- a/wsgiadmin/templates/ftps.html
+++ b/wsgiadmin/templates/ftps.html
@@ -30,9 +30,9 @@ function remove(what) {
 			<td>{{ ftp.username }}</td>
 			<td>{{ ftp.dir }}</td>
 			<td id="ftp_{{ ftp.id }}">
-				<a href="{% url wsgiadmin.ftps.views.passwd ftp.id %}" title="{% trans "Změnit heslo" %}"><img src={{ STATIC_URL }}icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Změnit heslo" %}" /></a>
-				<a href="{% url wsgiadmin.ftps.views.update ftp.id %}" title="{% trans "Upravit" %}"><img src={{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Upravit" %}" /></a>
-				<a href="#" title="{% trans "Smazat" %}" onclick="if(confirm('Opravdu chcete smazat doménu {{ ftp.name }}?')) remove({{ ftp.id }})"><img src={{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Smazat" %}" /></a>
+				<a href="{% url wsgiadmin.ftps.views.passwd ftp.id %}" title="{% trans "Změnit heslo" %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Změnit heslo" %}" /></a>
+				<a href="{% url wsgiadmin.ftps.views.update ftp.id %}" title="{% trans "Upravit" %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Upravit" %}" /></a>
+				<a href="#" title="{% trans "Smazat" %}" onclick="if(confirm('Opravdu chcete smazat doménu {{ ftp.name }}?')) remove({{ ftp.id }})"><img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Smazat" %}" /></a>
 			</td>
 		</tr>
 		{% endfor %}
