--- a/wsgiadmin/templates/reg.html
+++ b/wsgiadmin/templates/reg.html
@@ -14,14 +14,14 @@
 		<!--                       CSS                       -->
 
 		<!-- Reset Stylesheet -->
-		<link rel="stylesheet" href={{ STATIC_URL }}css/reset.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen" />
 
 		<!-- Main Stylesheet -->
-		<link rel="stylesheet" href={{ STATIC_URL }}css/style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen" />
 
 		<!-- Invalid Stylesheet. This makes stuff look pretty. Remove it if you want the CSS completely valid -->
-		<link rel="stylesheet" href={{ STATIC_URL }}css/invalid.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href={{ STATIC_URL }}css/blue.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/invalid.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/blue.css" type="text/css" media="screen" />
 
 		<!-- Colour Schemes
 
@@ -29,34 +29,34 @@
 
 
 
-		<link rel="stylesheet" href={{ STATIC_URL }}css/red.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/red.css" type="text/css" media="screen" />
 
 		-->
 
 		<!-- Internet Explorer Fixes Stylesheet -->
 
 		<!--[if lte IE 7]>
-			<link rel="stylesheet" href={{ STATIC_URL }}css/ie.css" type="text/css" media="screen" />
+			<link rel="stylesheet" href="{{ STATIC_URL }}css/ie.css" type="text/css" media="screen" />
 		<![endif]-->
 
 		<!--                       Javascripts                       -->
 
 		<!-- jQuery -->
-		<script type="text/javascript" src={{ STATIC_URL }}scripts/jquery-1.3.2.min.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}scripts/jquery-1.3.2.min.js"></script>
 
 		<!-- jQuery Configuration -->
-		<script type="text/javascript" src={{ STATIC_URL }}scripts/simpla.jquery.configuration.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}scripts/simpla.jquery.configuration.js"></script>
 
 		<!-- Facebox jQuery Plugin -->
-		<script type="text/javascript" src={{ STATIC_URL }}scripts/facebox.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}scripts/facebox.js"></script>
 
 		<!-- jQuery WYSIWYG Plugin -->
-		<script type="text/javascript" src={{ STATIC_URL }}scripts/jquery.wysiwyg.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}scripts/jquery.wysiwyg.js"></script>
 
 		<!-- Internet Explorer .png-fix -->
 
 		<!--[if IE 6]>
-			<script type="text/javascript" src={{ STATIC_URL }}scripts/DD_belatedPNG_0.0.7a.js"></script>
+			<script type="text/javascript" src="{{ STATIC_URL }}scripts/DD_belatedPNG_0.0.7a.js"></script>
 			<script type="text/javascript">
 				DD_belatedPNG.fix('.png_bg, img, li');
 			</script>
@@ -71,7 +71,7 @@
 
 				<h1>{% trans "Webová administrace" %}</h1>
 				<!-- Logo (221px width) -->
-				<img id="logo" src={{ STATIC_URL }}images/logo.png" alt="Administrace" />
+				<img id="logo" src="{{ STATIC_URL }}images/logo.png" alt="Administrace" />
 			</div> <!-- End #logn-top -->
 
 			<div id="login-content">
