--- a/wsgiadmin/templates/simplepasswd.html
+++ b/wsgiadmin/templates/simplepasswd.html
@@ -1,39 +1,20 @@
 {% extends "admin.html" %}
 {% load i18n %}
 
-{% block jsblock %}
-function result_callback(data) {
-        if (data == "OK") $("#result").html("{% trans "Heslo bylo změněno." %}");
-        else $("#db_dialog").html(data);
-    }
-
-    $("#submit_button").click(function() {
-        $.post("{{ action }}", $("#myform").serialize(), result_callback);
-    });
-{% endblock %}
-
 {% block content %}
-<div class="content-box">
-    <div class="content-box-header">
-        <h3>{{ title }}</h3>
+    <div class="content-box">
+        <div class="content-box-header">
+            <h3>{{ title }}</h3>
 
-        <div class="clear"></div>
-    </div>
-    <div class="content-box-content">
-        <div class="tab-content default-tab" id="result">
-            <fieldset>
-                <form action="{% url db_passwd dbtype=dbtype dbname=dbname %}" method="post" id="myform">
-                    {% csrf_token %}
-                    <div id="insert_form">
-                        {{ form.as_p }}
-                    </div>
-                    <p>
-                        <input type="button" id="submit_button" value="{{ submit }}"/>
-                    </p>
-                </form>
-            </fieldset>
+            <div class="clear"></div>
         </div>
+
+        <form action="{% url db_passwd dbtype=dbtype dbname=dbname %}" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <p>
+                <input type="button" id="submit_button" value="{{ submit }}"/>
+            </p>
+        </form>
     </div>
-    <div class="clear"></div>
-</div>
 {% endblock %}
