Fixed long title of one link

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -157,7 +157,7 @@
 						<li>
 							<ul>
 								<li><a href="{% url wsgiadmin.useradmin.views.change_passwd %}">{% trans "Change password" %}</a></li>
-								<li><a href="{% url wsgiadmin.users.views.ssh_passwd %}">{% trans "Change password for SSH/SFTP/FTP" %}</a></li>
+								<li><a href="{% url wsgiadmin.users.views.ssh_passwd %}">{% trans "Change SSH/SFTP/FTP passwod" %}</a></li>
 								<li><a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a></li>
 							</ul>
 						</li>
